--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "materialize-css": "^1.0.0-rc.2",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-headroom": "^3.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "scss": "^0.2.4"
